--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,8 @@
 <body>
 {% if session.get('logFlag') %}
     userId : {{ session.get('userId') }} <br>
-    <a href="/logout">로그아웃</a>
+    <a href="/user_info_edit/{{ session['idx'] }}">회원정보 수정</a>
+    | <a href="/logout">로그아웃</a>
 {% else %}
     <a href="login_form">로그인</a>
 {% endif %}
