--- a/templates/main.html
+++ b/templates/main.html
@@ -5,14 +5,7 @@
     <title>main</title>
 </head>
 <body>
-{% if session.get('logFlag') %}
-    userId : {{ session.get('userId') }} <br>
-    <a href="/user_info_edit/{{ session['idx'] }}">회원정보 수정</a>
-    | <a href="/logout">로그아웃</a>
-{% else %}
-    <a href="login_form">로그인</a>
-{% endif %}
-<hr>
-main
+    <a href="login">로그인</a> <br>
+    <a href="register">회원가입</a>
 </body>
 </html>
