--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -5,7 +5,7 @@
     <title>login_form.html</title>
 </head>
 <body>
-<form action="/login_proc" method="post">
+<form action="/login" method="post">
     ID : <input type="text" name="id"><br>
     PWD : <input type="password" name="pwd"><br>
     <input type="submit" value="로그인">
