--- a/templates/before_register.html
+++ b/templates/before_register.html
@@ -2,10 +2,9 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>session_view.html</title>
+    <title>before_register</title>
 </head>
 <body>
-{{ session['logFlag'] }}<br>
-ID : {{ session['userId'] }}
+    <a href="register">회원 정보 등록</a>
 </body>
 </html>
