--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,9 @@
     <title>main</title>
 </head>
 <body>
-    <a href="login">로그인</a> <br>
-    <a href="register">회원가입</a>
+    <a href="camera">카메라</a> <br>
+    <a href="plan">계획</a><br>
+    <a href="user"></a>
+    <a href="logout">로그아웃</a>
 </body>
 </html>
