회원가입 구현

--- a/templates/before_register.html
+++ b/templates/before_register.html
@@ -5,6 +5,6 @@
     <title>before_register</title>
 </head>
 <body>
-    <a href="register">회원 정보 등록</a>
+    <a href="/register/gender">회원 정보 등록</a>
 </body>
 </html>
