--- a/templates/body_form.html
+++ b/templates/body_form.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
+<form action="/register/body" method="post">
+    키 : <input type="number" name="height"><br>
+    몸무게 : <input type="number" name="weight"><br>
+    <input type="submit" value="Next">
+</form>
 </body>
 </html>
