--- a/templates/age_form.html
+++ b/templates/age_form.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+<form action="/register/age" method="post">
+    나이 : <input type="number" name="age"><br>
+    <input type="submit" value="Next">
+</form>
 </body>
 </html>
