--- a/templates/gender_form.html
+++ b/templates/gender_form.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-
+<form action="/register/gender" method="post">
+    <input type="radio" id="male" name="gender" value="male">
+    <label for="male">Male</label>
+    <input type="radio" id="female" name="gender" value="female">
+    <label for="female">Female</label><br>
+    <input type="submit" value="Next">
+</form>
 </body>
 </html>
