--- a/templates/submit_spec.html
+++ b/templates/submit_spec.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+<form action="/register" method="post">
+    회원가입이 완료되었습니다.<br>
+    <input type="submit" value="Login">
+</form>
 </body>
 </html>
