회원 정보 수정 구현

--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 <body>
     <a href="camera">카메라</a> <br>
     <a href="plan">계획</a><br>
-    <a href="user"></a>
+    <a href="info_edit">정보 수정</a><br>
     <a href="logout">로그아웃</a>
 </body>
 </html>
